fix: removed visible scrollbar from view

--- a/src/css/fairytale.css
+++ b/src/css/fairytale.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap');
 @import "./components/curtains.css";
 
+html[data-theme="fairytale"],
+html[data-theme="fairytale"] body {
+    scrollbar-width: none;
+}
+
+html[data-theme="fairytale"]::-webkit-scrollbar,
+html[data-theme="fairytale"] body::-webkit-scrollbar {
+    display: none;
+}
+
 [data-theme="fairytale"] {
-
-    html, body {
-        scrollbar-width: none;
-        overflow-y: scroll;
-    }
-
     .parallax-lock {
         position: fixed;
         top: 0;
@@ -19,11 +23,6 @@
     .fairytale-container {
         height: 5000px;
         font-size: 1.2rem;
-    }
-
-    html::-webkit-scrollbar,
-    body::-webkit-scrollbar {
-        display: none;
     }
 
     p, h1, h2, h3, h4 {
@@ -66,10 +65,12 @@
         background-color: var(--color-bg-primary);
         transition: background-color 0.4s;
         color: var(--color-text-primary);
+        border-color: var(--color-black-transparent);
     }
 
     .btn:hover {
         background-color: color-mix(var(--color-bg-primary), var(--color-bg-secondary) 20%);
+        box-shadow: none;
     }
 
     .homeBtn {
@@ -115,6 +116,10 @@
         border-radius: 8px;
         text-shadow: 0 0 8px black,
         0 0 12px var(--color-bg-primary);
+    }
+
+    .txtLeft {
+        text-align: right !important;
     }
 
     .xxlTxt {
